PCHR-429: Fix profile pic on Safari
The profile picture in Safari was misaligned because of some wrong CSS rules applied to it

--- a/civihr_default_theme/assets/sass/civihr_default/_custom.scss
+++ b/civihr_default_theme/assets/sass/civihr_default/_custom.scss
@@ -922,6 +922,10 @@ form {
     overflow: hidden;
     border-radius: 50%;
     margin-left: 10px;
+
+    > img {
+        height: 100%;
+    }
 }
 .custom-scale-image {
     position: relative;
